pico css eklendi

--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
           <li><a href="#" role="button">Button</a></li>
         </ul>
       </nav>
+      <article>
+        <header>
+            Not : PicoCss github pages yapısına eklendi
+        </header>
+        <p>
+            Demo amaclı yapılmıstır
+        </p>
+      </article>
 </body>
 </html>
